# NCIIA

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  START_NCIIA.bat
config/: sources.yaml  system.yaml
nciia-core/: .env.example  README.md  pyproject.toml  run_server.py  verify_cpp.py
nciia-core/src/nciia/: __init__.py  cli.py
nciia-core/src/nciia/api/: __init__.py  server.py  websocket.py
nciia-core/src/nciia/api/middleware/: __init__.py  auth.py  rate_limit.py
nciia-core/src/nciia/api/routes/: __init__.py  advanced.py  assistant.py  attack.py  cases.py  enrichment.py  evidence.py  health.py  ingestion.py  intelligence.py  investigate.py  osint_intel.py  personas.py  response.py  signals.py  threats.py  tracker.py
nciia-core/src/nciia/attack/: __init__.py  tagger.py
nciia-core/src/nciia/behavioral/: __init__.py  fingerprint.py
nciia-core/src/nciia/data/ml/: threat_scorer.pkl
nciia-core/src/nciia/db/: __init__.py  database.py
nciia-core/src/nciia/enrichment/: __init__.py  engine.py
nciia-core/src/nciia/evidence/: __init__.py  packager.py
nciia-core/src/nciia/hunter/: __init__.py  agent.py  autonomous.py
nciia-core/src/nciia/ingestion/: __init__.py  collector.py  delta.py  rate_limiter.py  rss.py  threat_feeds.py
nciia-core/src/nciia/ingestion/sources/: __init__.py  base.py  domain.py  paste_sites.py  web_search.py
nciia-core/src/nciia/intelligence/: __init__.py  analyst.py  analyst_llm.py
nciia-core/src/nciia/llm/: __init__.py  restricted.py
nciia-core/src/nciia/ml/: __init__.py  drift.py  predictor.py  real_scorer.py
nciia-core/src/nciia/models/: __init__.py  base.py
nciia-core/src/nciia/osint/: __init__.py  crypto_tracer.py  darkweb_scanner.py  exif_forensics.py  phone_intel.py  scammer_profiler.py  upi_resolver.py  username_enum.py
nciia-core/src/nciia/persona/: __init__.py  correlation.py  inference.py  reconstructor.py  seed.py  timeline.py
nciia-core/src/nciia/response/: __init__.py  engine.py
nciia-core/src/nciia/simulation/: scenario.py
nciia-core/src/nciia/threat/: __init__.py  escalation.py  scorer.py
nciia-core/src/nciia/utils/: __init__.py  config.py  logging.py
nciia-core/tests/: __init__.py  test_api.py  test_database.py  test_models.py
nciia-dashboard/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
nciia-dashboard/src/: App.tsx  advanced.css  index.css  main.tsx
nciia-dashboard/src/components/: CyberBackground.tsx  FraudControlCenter.tsx  GlobalErrorBoundary.tsx  LiveTicker.tsx  NetworkGraph.tsx  Sidebar.tsx  ThreatGlobe.tsx  ThreatMeter.tsx
nciia-dashboard/src/context/: WebSocketContext.tsx
nciia-dashboard/src/lib/: api.ts  websocket.ts
nciia-dashboard/src/pages/: AiAnalyst.tsx  Alerts.tsx  AttackMap.tsx  CanaryTracker.tsx  Cases.tsx  CryptoTracer.tsx  DarkWebScanner.tsx  Dashboard.tsx  EnrichmentExplorer.tsx  ExifForensics.tsx  HunterAgents.tsx  OsintSearch.tsx  Personas.tsx  ScamInvestigator.tsx  Signals.tsx  ThreatIntelligence.tsx
nciia-perf/: CMakeLists.txt
nciia-perf/include/stylometry/: analyzer.h
nciia-perf/src/bindings/: c_bindings.cpp
nciia-perf/src/hashing/: fast_hash.cpp
nciia-perf/src/similarity/: text_sim.cpp
nciia-perf/src/stylometry/: analyzer.cpp  features.cpp
nciia-perf/tests/: test_stylometry.cpp
