[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nciia-core"
version = "1.0.0"
description = "N-CIIA: National Cyber Investigation & Intelligence Assistant — Enterprise Threat Intelligence Platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "N-CIIA Team"}
]
keywords = ["cybersecurity", "osint", "threat-intelligence", "investigation", "mitre-attack", "ioc-enrichment"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",

    # Database
    "aiosqlite>=0.19.0",
    "sqlalchemy>=2.0.0",

    # Data Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # HTTP Client (async — used by enrichment engine)
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",

    # ML / AI
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",

    # Utilities
    "pyyaml>=6.0",
    "python-dateutil>=2.8.0",
    "python-multipart>=0.0.6",
    "rich>=13.0.0",
    "structlog>=23.2.0",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12.0",

    # Hashing & Security
    "xxhash>=3.4.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "black>=23.11.0",
    "httpx>=0.25.0",
]
llm = [
    "openai>=1.3.0",
    "groq>=0.4.0",
]
nlp = [
    "spacy>=3.7.0",
    "transformers>=4.35.0",
    "onnxruntime>=1.16.0",
]

[project.scripts]
nciia = "nciia.cli:main"
nciia-server = "nciia.api.server:run"

[tool.hatch.build.targets.wheel]
packages = ["src/nciia"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.black]
line-length = 100
target-version = ["py310"]
